changing HTTPUrlConnection by HttpClient